Simple Bullet Editor in JS

--- a/events_index.html
+++ b/events_index.html
@@ -12,7 +12,7 @@
 
     <h4> Multiply the Numbers</h4>
     <p>
-        <input id="num-one"> + <input id="num-two">
+        <input id="num-one"> * <input id="num-two">
     </p>
 
     <p id="mul-result"></p>
